<resources>
    <string name="app_name">Prototype</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="IV">Descripción</string>
    <string name="tituloItem">Título del item</string>
    <string name="descripcionItem">Descripción Item</string>
    <string name="txt_tituloItem">Titulo item</string>
    <string name="txt_descripcionItem">Descripcion del item de compra</string>
    <string name="IV_item">Imagen item</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your username…</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password…</string>
    <string name="remember_me">"Remember me        "</string>
    <string name="cancel">Cancel</string>
    <string name="item1">About</string>
    <string name="item2">Settings</string>
    <string name="logout">Logout</string>
    <string name="Carrito">Carrito</string>
    <string name="btn_compra">Añadir al carrito</string>
    <string name="anadir_item">Añadir Item</string>
    <string name="nombre_del_item">Nombre del item</string>
    <string name="txt_baseDeDatos">BASE DE DATOS</string>
   <string name="label_titulo_item">Título ítem:</string>
    <string name="hint_titulo_item">Inserte título de ítem</string>
    <string name="imagen_item">Imagen item</string>
    <string name="examinar">Examinar</string>
    <string name="label_descripcion">Descripción:</string>
    <string name="hint_descripcion">Inserte descripción de ítem</string>
    <string name="label_precio">Precio:</string>
    <string name="hint_precio">Inserte precio del ítem</string>
    <string name="agregar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mostrar">Mostrar</string>
    <string name="precio">Precio</string>
    <string name="btn_buscar">Buscar</string>
    <string name="txt_precioItem">Precio</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email...</string>
</resources>