<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/carrito"
        android:icon="@drawable/ic_supermercado"
        android:title="@string/Carrito"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/item1"
        android:title="@string/item1"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2"
        android:title="@string/item2"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:title="@string/logout"
        android:visible="true"
        app:showAsAction="never" />

</menu>