<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseDeDatos">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppWhiteTheme"
        android:elevation="4dp"
        app:subtitleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_BaseDeDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/txt_baseDeDatos"
                android:textColor="#B90027FF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_tituloItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_titulo_item"
                android:textColor="#000000"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edTxt_tituloItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_titulo_item"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btn_buscar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_buscar" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_descripcionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_descripcion"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edTxt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hint_descripcion" />

            <TextView
                android:id="@+id/txt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_precio"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edTxt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/hint_precio"/>

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/agregar"
                android:background="@drawable/round_button"/>

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/editar"
                android:background="@drawable/round_button"/>

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/eliminar"
                android:background="@drawable/round_button"/>

            <Button
                android:id="@+id/btn_mostrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/mostrar"
                android:background="@drawable/round_button"/>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
