<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/detailsLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="DetailsItems">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="4dp"/>

    <LinearLayout
        android:id="@+id/txt_TituloItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingTop="16dp"
        android:paddingRight="64dp"
        android:paddingBottom="16dp"
        tools:context=".DetailsItems">

        <TextView
            android:id="@+id/txt_tituloItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/txt_tituloItem"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@string/IV_item"
            android:src="@drawable/image" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_descripcionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_descripcionItem"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_precioItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_precioItem"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_compra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_anadircarrito"
            android:text="@string/btn_compra"
            app:layout_anchor="@+id/txt_TituloItem"
            app:layout_anchorGravity="center" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>